# mysite

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  yandex_compute  yandex_compute.pub
mysite/: settings.py  urls.py
shopapp/: forms.py  urls.py  views_debug.py
