[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Илья Кокнаев <9363145053@my.lerna.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-debug-toolbar = "^4.4.6"
djangorestframework = "^3.15.2"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
